--- a/app/src/main/res/layout/act_realtime.xml
+++ b/app/src/main/res/layout/act_realtime.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:padding="16dp"
+    android:padding="8dp"
     android:layout_height="match_parent">
 
     <ListView
         android:layout_width="match_parent"
         android:id="@+id/list"
-        android:dividerHeight="16dp"
+        android:dividerHeight="0dp"
+        android:divider="@null"
         android:layout_height="match_parent"/>
 
 </LinearLayout>
