--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,18 @@
         android:text="Remote Config"
         android:layout_height="48dp" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:id="@+id/storage"
+        android:layout_marginTop="16dp"
+        android:background="#fff"
+        android:layout_below="@+id/config"
+        android:textColor="#000"
+        android:paddingLeft="24dp"
+        android:gravity="left|center_vertical"
+        android:text="Realtime storage"
+        android:layout_height="48dp" />
+
 
 
 </RelativeLayout>
